--- a/CSS/indexStyling.css
+++ b/CSS/indexStyling.css
@@ -29,6 +29,12 @@ ul li a {
     display: block;
 }
 
+ul li a {
+    text-decoration: none;
+    color: white;
+    display: block;
+}
+
 ul li a:hover {
     background-color: green;
 }
