--- a/CSS/adminStyling.css
+++ b/CSS/adminStyling.css
@@ -459,10 +459,6 @@
         width: 97%;
     }
     
-    input.editProductText {
-        width: 70%;
-    }
-    
     .ColumnSubTextcolumnMainTextCategoryID,
     .columnMainTextCategoryName {
         width: 30%;
@@ -562,62 +558,6 @@
         color: #fff;
     }
     
-    @media screen and (max-width:500px) {
-        .bodyLeft {
-            width: 95%;
-            flex-direction: row;
-            flex-wrap: wrap;
-            font-size: 10px;
-        }
-        .bodyRight {
-            width: 95%;
-        }
-        .mainContainer {
-            display: flex;
-            width: 100%;
-            margin-top: 80px;
-            flex-direction: column;
-        }
-    }
-    
-    @media screen and (max-width:500px) {
-        .columnContainer {
-            font-size: 10px;
-        }
-        .addText {
-            font-size: 14px;
-        }
-        .logo {
-            font-size: 1.5em;
-            margin-top: 10px;
-        }
-        #adminName {
-            font-size: 1em;
-        }
-        #logout {
-            font-size: 1.5em;
-            margin-top: 10px;
-        }
-        input.editProductText {
-            font-size: 12px;
-            height: 20px;
-            text-align: center;
-        }
-        .label-left {
-            font-size: 12px;
-        }
-        input {
-            font-size: 12px;
-        }
-        #button {
-            width: 150px;
-            font-size: 12px;
-        }
-        .message {
-            font-size: 14px;
-        }
-    }
-    
     .MainContainer {
         font-size: 18px;
         display: flex;
@@ -700,4 +640,198 @@
         text-align: end;
         height: 150px;
         width: 50%;
+    }
+    
+    @media screen and (min-width:300px) and (max-width:750px) {
+        .bodyLeft {
+            width: 95%;
+            flex-direction: row;
+            flex-wrap: wrap;
+            font-size: 10px;
+        }
+        .bodyRight {
+            width: 95%;
+        }
+        .mainContainer {
+            display: flex;
+            width: 100%;
+            margin-top: 80px;
+            flex-direction: column;
+            font-size: 2em;
+        }
+    }
+    
+    @media screen and (min-width:300px) and (max-width:750px) {
+        element.style {
+            font-size: 12px;
+        }
+        .ColumnSubText.CategoryID,
+        .cmtProductID,
+        .cmtCategoryID,
+        .cmtUnitInStock,
+        .cmtUpdate,
+        .cmtDelete,
+        .cmtPrice {
+            width: 10%;
+            font-size: 8px;
+        }
+        .Delete {
+            font-size: 8px;
+        }
+        element.style {
+            font-size: 10px;
+            width: 50%;
+            margin-left: 10px;
+        }
+        .updateLabel {
+            font-size: 10px;
+            margin-left: 10px;
+            width: 50%;
+        }
+        .ProductID,
+        .CategoryID,
+        .Price,
+        .UnitInStock,
+        .update,
+        .delete {
+            width: 10%;
+            font-size: 8px;
+        }
+        .ProductName,
+        .columnMainText.cmtProductName {
+            width: 40%;
+            font-size: 8px;
+        }
+        .CategoryIDT,
+        .CategoryNameT,
+        .UpdateT,
+        .DeleteT {
+            width: 25%;
+            font-size: 8px;
+        }
+        .ColumnSubText.CategoryID,
+        .ColumnSubText.CategoryName,
+        .Update.UpdateCategoryBtn,
+        .deleteCategoryBtn.Delete,
+        .CategoryIDCategory {
+            font-size: 8px;
+        }
+        .columnMainText.Send,
+        .columnMainText.Show,
+        .SendOrderBtn.update,
+        .showOrderDetailsBtn.Delete {
+            font-size: 8px;
+        }
+        .columnMainText.Role {
+            font-size: 8px;
+        }
+        .ColumnSubText.ShipperID,
+        .columnMainText.Recieved,
+        .ColumnSubText.Recieved,
+        .co .columnContainer {
+            font-size: 10px;
+        }
+        .addText {
+            font-size: 14px;
+        }
+        .logo {
+            font-size: 1.5em;
+            margin-top: 10px;
+        }
+        #adminName {
+            font-size: 1em;
+        }
+        #logout {
+            font-size: 1.5em;
+            margin-top: 10px;
+        }
+        input.editProductText {
+            font-size: 12px;
+            height: 20px;
+            text-align: center;
+            width: 50%;
+        }
+        .label-left {
+            font-size: 12px;
+        }
+        input {
+            font-size: 12px;
+        }
+        #button {
+            width: 150px;
+            font-size: 12px;
+        }
+        .message {
+            font-size: 14px;
+        }
+        .MainContainer {
+            font-size: 12px;
+        }
+        .rowContainer {
+            padding: 10px;
+        }
+        .addText {
+            font-size: 12px;
+        }
+        select {
+            font-size: 10px;
+        }
+        .ColumnSubText.OrderID,
+        .columnMainText.UserIDOrders,
+        .columnMainText.Shipped,
+        .ColumnSubText.OrderID,
+        .UserID,
+        .ColumnSubText.Shipped,
+        .columnMainText.OrderID,
+        .columnMainText.UserIDNewsletters {
+            font-size: 8px;
+        }
+        .columnMainText.OrderDate,
+        .ColumnSubText.OrderDate,
+        .columnMainText.Email,
+        .ColumnSubText.Email {
+            font-size: 8px;
+        }
+        .ColumnSubText.ShipperID,
+        .columnMainText.Recieved,
+        .ColumnSubText.Recieved,
+        .co .columnContainer {
+            font-size: 8px;
+        }
+        .ColumnSubText.ShipperID,
+        .columnMainText.Recieved,
+        .ColumnSubText.Recieved,
+        .columnMainText.ShipperID {
+            width: 12%;
+            font-size: 8px;
+        }
+        .columnMainText.columnMainTextD.QuantityT,
+        .columnMainText.columnMainTextD.ProductIDT,
+        .columnMainText.columnMainTextD.UnitPriceT,
+        .ColumnSubTextD.ProductIDORderDetails,
+        .ColumnSubTextD.Quantity,
+        .ColumnSubTextD.UnitPrice,
+        .columnMainText.NewsletterID,
+        .ColumnSubText.NewsletterID,
+        .columnMainText.FirstName,
+        .ColumnSubText.FirstName,
+        .columnMainText.LastName,
+        .ColumnSubText.LastName {
+            width: 20%;
+            font-size: 8px;
+        }
+        .iconsContainer {
+            margin: 5px;
+            width: 50%;
+        }
+        .iconDashBord {
+            font-size: 3em;
+            width: 40%;
+        }
+        .totalText {
+            font-size: 16px;
+        }
+        .numberOf {
+            font-size: 2.5em;
+        }
     }
